Fixes parent theme style rules related to work-breaking and word-wrapping.

--- a/css/parent-theme-modifications-default.css
+++ b/css/parent-theme-modifications-default.css
@@ -13,6 +13,14 @@ main#site-content, .entry-content {
 	font-size:0.9em;
 }
 
+/* Fix word breaking and wrapping rules */
+*,
+*::before,
+*::after {
+	word-break: normal;
+	word-wrap: normal;
+}
+
 /* Modify default link colors */
 a {
 	color:#006633;
